pkg/front_end/testcases/inference/bug33324.dart.strong.transformed.expect
library /*isLegacy*/;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/bug33324.dart:5:1: Error: Library doesn't support null safety.
// // @dart=2.9
// ^^^^^^^^^^^^
//
import self as self;
import "dart:core" as core;

static method foo() → core::int* {
  core::Function* f = (dynamic x) → dynamic => x;
  core::List<dynamic>* l = core::_GrowableList::_literal1<core::String*>("bar").{core::Iterable::map}<dynamic>(f as{TypeError,ForLegacy} (core::String*) →* dynamic){((core::String*) →* dynamic) →* core::Iterable<dynamic>*}.{core::Iterable::toList}(){({growable: core::bool*}) →* core::List<dynamic>*};
  l.{core::List::add}(42){(dynamic) →* void};
  return l.{core::Iterable::first}{dynamic}{dynamic}.length as{TypeError,ForDynamic,ForLegacy} core::int*;
}
static method main() → dynamic {}
